update build.sbt
add fork